# usv_simulator

./: README.md
otter_control/: CMakeLists.txt  package.xml
otter_control/include/otter_control/: controller.h
otter_control/src/: controller.cpp
otter_description/: CMakeLists.txt  package.xml
otter_description/meshes/: propeller.dae
otter_description/urdf/: materials.urdf.xacro  otter_base.urdf.xacro  parts.mininertia.urdf.xacro  propeller.xacro
otter_gazebo/: CMakeLists.txt  package.xml
otter_gazebo/launch/: keydrive.launch  localization.launch  otter.launch  otter_fast.launch
otter_gazebo/nodes/: twist2thrust.py
otter_gazebo/urdf/: otter_gazebo.urdf.xacro  otter_gazebo_direct_control_plugin.xacro
otter_gazebo/urdf/dynamics/: otter_gazebo_dynamics_plugin.xacro  otter_gazebo_wind_plugin.xacro
otter_gazebo/urdf/sensors/: otter_3d_lidar.xacro  otter_camera.xacro  otter_gps.xacro  otter_imu.xacro  otter_lidar.xacro  otter_p3d.xacro
otter_gazebo/urdf/thrusters/: otter_gazebo_thruster_config.xacro  otter_gazebo_thruster_plugin.xacro
usv_gazebo_plugins/: CMakeLists.txt
usv_gazebo_plugins/include/usv_gazebo_plugins/: buoyancy_gazebo_plugin.hh  usv_gazebo_direct_control_plugin.hh  usv_gazebo_dynamics_plugin.hh  usv_gazebo_thrust_plugin.hh  usv_gazebo_wind_plugin.hh
usv_gazebo_plugins/src/: buoyancy_gazebo_plugin.cc  usv_gazebo_direct_control_plugin.cc  usv_gazebo_dynamics_plugin.cc  usv_gazebo_thrust_plugin.cc  usv_gazebo_wind_plugin.cc
usv_worlds/: CMakeLists.txt  package.xml
usv_worlds/worlds/: simple_box.xacro  simple_obstacles.xacro  usv.world.xacro  usv_fast.world.xacro
