<?xml version="1.0"?>
<package format="2">
  <name>otter_description</name>
  <version>0.0.0</version>
  <description>URDF description for the otter</description>

  <maintainer email="jhlenes@outlook.com">Jan Henrik Lenes</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
</package>
